--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -36,12 +36,16 @@
                     document.getElementById('balance-'+ id ).innerHTML = currency( document.getElementById('value'+ id +'Modal').value )
                         .add( document.getElementById('balance-'+ id ).innerHTML ).format();
 
-                    $.post( "/admin/ajax/invest", { idValue: idValue, id: id }, function( e ) {
-                    document.getElementById('balance').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
-                    document.getElementById('available_funds').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
+                    if( currency(idValue).intValue < 600000  ){
+                        alert(' Минимальная сумма инвестиций 6 000 руб');
+                        return;
+                    }
 
-                    App.balance = currencyBalance;
-                    $('#' + id + 'Modal').modal('hide');
+                    $.post( "/admin/ajax/invest", { idValue: idValue, id: id }, function( e ) {
+                        document.getElementById('balance').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
+                        document.getElementById('available_funds').innerHTML = currency(currencyBalance, { separator: ' ' }).format();
+                        App.balance = currencyBalance;
+                        $('#' + id + 'Modal').modal('hide');
                     });
                 } else {
                     alert('Недостаточно денег на счете')
