--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -125,17 +125,17 @@
 
 
 
-                                    Консервативный  <strong id="balance-Conservative">{{ report.conservative }}</strong> RUB
+                                    Консервативный  <strong id="balance-Conservative">{{ report.conservative }}</strong> USD
                                     <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
                                     </div>
-                                    Оптимальный <strong id="balance-Optimal">{{ report.optimum }}</strong> RUB
+                                    Оптимальный <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
                                     <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
                                     </div>
-                                    IPO <strong id="balance-IPO">{{ report.ipo }}</strong> RUB
+                                    IPO <strong id="balance-IPO">{{ report.ipo }}</strong> USD
                                     <span class="pull-right text-danger text-sm">0% <i class="md md-trending-down"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:4%"></div>
@@ -145,7 +145,7 @@
                                     {#<div class="progress progress-hairline">#}
                                         {#<div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>#}
                                     {#</div>#}
-                                    Свободные средства <strong id="available_funds">{{ report.available_funds  }}</strong> RUB
+                                    Свободные средства <strong id="available_funds">{{ report.available_funds  }}</strong> USD
                                     <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
