--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -2,6 +2,25 @@
 
 {% block body %}
 
+
+
+    <!-- Section: intro -->
+    <section id="intro" class="intro">
+
+        <div class="slogan">
+            <h2>О НАС</h2>
+            <h4>Мы являемся экспертами в области аналитики и инвестирования в различные
+                современные финансовые инструменты, включая высокодоходные.</h4>
+        </div>
+        <div class="page-scroll">
+
+        </div>
+    </section>
+    <!-- /Section: intro -->
+
+
+
+
     <style>
         .div-col-md-background{
             background: #e5e6e6; /* Цвет фона */
@@ -12,28 +31,7 @@
             padding-bottom: 22px;padding-top: 22px;
         }
     </style>
-    <div class="text-center py-5"
-         style="background-image: url('/main/site-assets/cover_curve.jpg');background-position:center bottom;background-size:cover;">
-        <div class="container py-4 mt-4">
-            <div class="row">
-                <div class="col-md-12 text-white">
-                    <h1 class="mb-2 display-5">
-                        О нас
-                    </h1>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-12 text-white" style="font-weight:bold" >
-                    <h5>
-                        Мы являемся экспертами в области аналитики и инвестирования в различные
-                        современные финансовые инструменты, включая высокодоходные.
-                    </h5>
-                </div>
-            </div>
-
-        </div>
-    </div>
 
     <div class="text-center section py-5">
         <div class="container">
@@ -90,4 +88,5 @@
             </div>
         </div>
     </div>
+    <br/><br/><br/><br/>
 {% endblock %}
