--- a/templates/index/agreement.html.twig
+++ b/templates/index/agreement.html.twig
@@ -12,19 +12,23 @@
         }
     </style>
 
-    <div class="text-center py-5"
-         style="background-image: url('/main/site-assets/cover_curve.jpg');background-position:center bottom;background-size:cover;">
-        <div class="container py-4 mt-4">
-            <div class="row">
-                <div class="col-md-12 text-white">
-                    <h1 class="mb-2 display-5">
-                        Соглашение
-                    </h1>
-                    <p> Условия и положения </p>
-                </div>
-            </div>
+
+
+    <!-- Section: intro -->
+    <section id="intro" class="intro">
+
+        <div class="slogan">
+            <h2>Соглашение</h2>
+            <h4>Условия и положения</h4>
         </div>
-    </div>
+        <div class="page-scroll">
+
+        </div>
+    </section>
+    <!-- /Section: intro -->
+
+
+
 
     <div class="text-center section py-5">
 
@@ -92,6 +96,6 @@
 
 
     </div>
-
+    <br/><br/><br/><br/>
 
 {% endblock %}
