--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -200,7 +200,7 @@
 <!-- END HEADER-->
 
 <!-- BEGIN BASE-->
-<div id="base">
+<div id="base" style="background: url(/squadfree/img/bg1.jpg) no-repeat top center;" >
 
     <!-- BEGIN OFFCANVAS LEFT -->
     <div class="offcanvas">
