--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="section-body contain-lg">
+    <div class="section-body contain-lg" style="background-color: #fff; ">
         <!-- BEGIN INTRO -->
         <div class="row">
                 {% if app.request.hasPreviousSession %}
