--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -134,7 +134,7 @@
                 <ul class="header-nav header-nav-profile">
                     <li>
                         <a href="#" title="Баланс" style="top: 11px;">
-                            <span class="badge style-danger pull-right" style="background-color: #3682f4;">
+                            <span class="badge style-danger pull-right" style="background-color: #60a49c;">
                                 <i class="md md-account-balance-wallet" style="padding-right: 1px; padding-left: 0px; padding-bottom: 1px;"></i>
                                     Свободные средства
                                     <span id="balance">
@@ -170,7 +170,7 @@
                             {#<li class="dropdown-header">Config</li>#}
                             <li><a href="/profile/">Мой профиль</a></li>
                             <li><a href="/admin/">Кабинет</a></li>
-                            <li><a href="#/verify">Верификация аккаунта</a></li>
+                            <li><a href="/admin/verify">Верификация аккаунта</a></li>
                             <li class="divider"></li>
                             <li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
                         </ul><!--end .dropdown-menu -->
