--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -2,23 +2,29 @@
 
 {% block body %}
 
+<div class="container">
     <div class="section-body contain-lg" style="background-color: #fff; ">
         <!-- BEGIN INTRO -->
-        <div class="row">
                 {% if app.request.hasPreviousSession %}
                     {% for type, messages in app.session.flashbag.all() %}
                         {% for message in messages %}
-                            <div class="flash-{{ type }}">
-                                {{ message }}
+                            <div class="alert alert-info" role="alert">
+                                <div class="flash-{{ type }}">
+                                 {{ message }}
+                                </div>
                             </div>
                         {% endfor %}
                     {% endfor %}
                 {% endif %}
 
-                <div>
+                <div style="
+                    padding-left: 22px;
+                    padding-right: 22px;
+                ">
                     {% block fos_user_content %}
                     {% endblock fos_user_content %}
                 </div>
-        </div>
+
     </div>
+</div>
 {% endblock %}
