--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -310,8 +310,8 @@
                     </a>
                     <!--start submenu -->
                     <ul>
-                        <li><a href="/admin/#/top-up-account" ><span class="title">Пополнить</span></a>
-                        <li><a href="/admin/#/admin/withdraw" ><span class="title">Вывести</span></a>
+                        <li><a href="/admin/#/top-up-account" ><span  onclick="alert('Для пополнения напишите письмо на адрес globalbigbell@rambler.ru  , мы Вам предоставим реквезиты ');" class="title">Пополнить</span></a>
+                        <li><a href="/admin/#/admin/withdraw" ><span  onclick="alert('Для вывода напишите письмо на адрес globalbigbell@rambler.ru с Вашими реквезитами  ');"  class="title">Вывести</span></a>
                         {#<li><a href="#/materialadmin/html/tables/static.html" ><span class="title">Static Tables</span></a></li>#}
                         {#<li><a href="#/materialadmin/html/tables/dynamic.html" ><span class="title">Dynamic Tables</span></a></li>#}
                         {#<li><a href="#/materialadmin/html/tables/responsive.html" ><span class="title">Responsive Table</span></a></li>#}
