--- a/templates/admin/verify.html.twig
+++ b/templates/admin/verify.html.twig
@@ -24,6 +24,11 @@
                                         <p> Acceptable file formats are jpg, or png; from 500kb up to 5Mb.</p>
                                         <p> выслать все документы на адрес globalbigbell@rambler.ru</p>
                                         <p> с email с которого вы зарегестрировались в системе</p>
+                                        <center>
+                                            <p> + Ваше фото с документам</p>
+                                            <img src="/main/img/checking.jpg" />
+                                        </center>
+
                                     </div>
                                 </div><!--end .card-body -->
                             </div><!--end .col -->
