--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -195,7 +195,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Conservative') ">Инвестировать</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                    <a href="#" class="btn btn-link" >Подробней</a>
+                    {#<a href="#" class="btn btn-link" >Подробней</a>#}
                 </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Optimal')" >Инвестировать</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                    <a href="#" class="btn btn-link">Подробней</a>
+                    {#<a href="#" class="btn btn-link">Подробней</a>#}
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('IPO') " >Инвестировать</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-                    <a href="#" class="btn btn-link">Подробней</a>
+                    {#<a href="#" class="btn btn-link">Подробней</a>#}
                 </div>
             </div>
         </div>
