--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -42,7 +42,8 @@
                 <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand" href="/">
-                <h1>GlobalBigBell</h1>
+                <img src="/main/img/logo.png" style="width: 100px;"/>
+                {#<h1>GlobalBigBell</h1>#}
             </a>
         </div>
 
