--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -54,7 +54,7 @@
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
-                                        <img src="/main/img/2.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
+                                        <img src="/main/img/_1.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
                                     </center>
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                                 {#<p class="subtitle">Ruby on Rails</p>#}
                                 <div class="avatar">
                                     <center>
-                                        <img src="/main/img/2.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
+                                        <img src="/main/img/_2.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
                                     </center>
                                 </div>
 
@@ -85,7 +85,7 @@
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
-                                        <img src="/main/img/2.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
+                                        <img src="/main/img/_3.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" />
                                     </center>
                                 </div>
 
