--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -126,19 +126,19 @@
 
 
                                     Консервативный  <strong id="balance-Conservative">{{ report.conservative }}</strong> USD
-                                    <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
+                                    {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
-                                        <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
+                                        <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
                                     Оптимальный <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
-                                    <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
+                                    {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
-                                        <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
+                                        <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
                                     IPO <strong id="balance-IPO">{{ report.ipo }}</strong> USD
-                                    <span class="pull-right text-danger text-sm">0% <i class="md md-trending-down"></i></span>
+                                    {#<span class="pull-right text-danger text-sm">0% <i class="md md-trending-down"></i></span>#}
                                     <div class="progress progress-hairline">
-                                        <div class="progress-bar progress-bar-danger" style="width:4%"></div>
+                                        <div class="progress-bar progress-bar-danger" style="width:0%"></div>
                                     </div>
                                     {#32,301 Баланс#}
                                     {#<span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>#}
@@ -146,9 +146,9 @@
                                         {#<div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>#}
                                     {#</div>#}
                                     Свободные средства <strong id="available_funds">{{ report.available_funds  }}</strong> USD
-                                    <span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>
+                                    {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
-                                        <div class="progress-bar progress-bar-primary-dark" style="width:4%"></div>
+                                        <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
                                 </div><!--end .card-body -->
                             </div><!--end .col -->
