--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -333,6 +333,20 @@
                 <!-- END TABLES -->
 
 
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
+                        <span class="title">Обучение</span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a  target="_blank" href="/admin/training" ><span class="title">Обучение</span></a></li>
+
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
+
+
+
 
 
                 <li class="gui-folder">
