--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -690,7 +690,7 @@
     <div>
         <span>
             {% if user is defined %}
-                Ваша реферальная ссылка  http://globalbigbell.com/register/r?={{ user.id }}
+                Ваша реферальная ссылка  http://globalbigbell.com/register/?r={{ user.id }}
             {% endif %}
         </span>
     </div>
